# vbar

./: .travis.yml  README.md  dependency.install  gperf.custom  launch  meson.build  meson.extra.install  meson_options.txt  scan-build.test  splint.test  test.sh  theme.install  valgrind.test
core/: bar.c  config.c  delay.c  file.c  heap.c  intp.c  intp.h  json.c  main.c  memory.c  modules.c  optex.c  optex.h  protect.c  safe.c  signal.c  spawn.c  string.c  vbar.c  web.c
ef/: deadpoll.c  delay.c  file.c  ft.c  hashalg.c  heap.c  image.c  json.c  list.c  memory.c  milu.c  optex.c  phq.c  proc.c  protect.c  rbhash.c  safe.c  signal.c  socket.c  spawn.c  stack.c  string.c  sysclass.c  trie.c  utf8.c  vectorization.c  window.c  xorg.c
gadget/: G_alsa.c  G_clock.c  G_cpu.c  G_cpufreq.c  G_label.c  G_memory.c  G_network.c  G_powerstat.c  G_pulseaudio.c  G_script.c  G_workspace.c  baseScript.h  gadget.build
gperf/: intp.gperf  mods.gperf
include/: vbar.h
include/ef/: chash.h  deadpoll.h  delay.h  file.h  ft.h  image.h  json.h  list.h  memory.h  milu.h  os.h  phq.h  proc.h  socket.h  spawn.h  stack.h  strong.h  sysclass.h  trie.h  type.h  utf8.h  vectorization.h  window.h  xorg.h
include/vbar/: config.h  delay.h  file.h  ipc.h  json.h  memory.h  modules.h  os.h  spawn.h  string.h  type.h  web.h
ipc/: i3pc.c  icommonpc.c  idpc.c
modules/: M_cpu.c  M_cpufreq.c  M_datetime.c  M_ip.c  M_ipc.c  M_memory.c  M_net.c  M_network.c  M_power.c  M_static.c  M_temperature.c  M_time.c  M_weather.c  M_wireless.c
themes/gaps/: config
themes/gaps/cpu/: config
themes/gaps/ip/: config
themes/gaps/memory/: config
themes/gaps/power/: config
themes/gaps/static/: powerclose  reboot
themes/gaps/temperature/: config
themes/gaps/weather/: config
themes/gaps/wireless/: config
themes/i3/: config
themes/i3/cpu/: config
themes/i3/cpufreq/: config
themes/i3/datetime/: config
themes/i3/ip/: config
themes/i3/memory/: config
themes/i3/network/: config
themes/i3/power/: config
themes/i3/static/: logout  power  powerclose  poweropen
themes/i3/temperature/: config
themes/nounicode/: config
themes/nounicode/cpu/: config
themes/nounicode/cpufreq/: config
themes/nounicode/datetime/: config
themes/nounicode/ip/: config
themes/nounicode/memory/: config
themes/nounicode/network/: config
themes/nounicode/power/: config
themes/nounicode/static/: logout  powerclose  poweropen
themes/nounicode/temperature/: config
themes/nounicode/weather/: config
themes/nounicode/wireless/: config
themes/rainbow/: config
themes/rainbow/cpu/: config
themes/rainbow/cpufreq/: config
themes/rainbow/datetime/: config
themes/rainbow/ip/: config
themes/rainbow/memory/: config
themes/rainbow/network/: config
themes/rainbow/power/: config
themes/rainbow/static/: logout  power  powerclose  poweropen  reboot
themes/rainbow/temperature/: config
themes/rainbow/weather/: config
themes/rainbow/wireless/: config
themes/test/: config.c
themes/vbextreme/: clock.h  config.c  label.h  network.h  powerstat.h  script.h  workspace.h
tools/: vbar.ipc.send
