option('ebug', type: 'integer', value: '0', description: 'set debug level, 0 disable 4 full')
option('olor', type: 'integer', value: '0', description: 'color debug, 0 disable 1 active')
option('assert', type: 'integer', value: '1', description: 'enable assertion')
option('optimize', type: 'integer', value: '1', description: 'enable optimization')
option('m-cpu-ncores', type: 'integer', value: '0', description: 'set max ncores available')
option('wm', type: 'string', value: '', description: 'set wm use')
option('Mcpu', type:'integer', value: '1', description: 'enable module')
option('Mcpufreq', type:'integer', value: '1', description: 'enable module')
option('Mmemory', type:'integer', value: '1', description: 'enable module')
option('Mdatetime', type:'integer', value: '1', description: 'enable module')
option('Mstatic', type:'integer', value: '1', description: 'enable module')
option('Mpower', type:'integer', value: '1', description: 'enable module')
option('Mnetwork', type:'integer', value: '1', description: 'enable module')
option('Mwireless', type:'integer', value: '1', description: 'enable module')
option('Mtemperature', type:'integer', value: '1', description: 'enable module')
option('Mipc', type:'integer', value: '1', description: 'enable ipc module')
option('Mip', type:'integer', value: '1', description: 'enable ip module')
option('Mweather', type:'integer', value: '1', description: 'enable weather module')

