option('ebug', type: 'integer', value: '0', description: 'set debug level, 0 disable 4 full')
option('olor', type: 'integer', value: '0', description: 'color debug, 0 disable 1 active')
option('assert', type: 'integer', value: '1', description: 'enable assertion')
option('optimize', type: 'integer', value: '2', description: 'enable optimization')
option('openmp', type: 'integer', value: '0', description: 'enable openmp')
option('gprof', type: 'integer', value: '0', description: 'enable gprof')
option('autovectorization', type: 'integer', value: '1', description: 'enable vectorization')

option('G_clock', type: 'integer', value: '1', description: 'enable clock gadget')
option('G_cpu', type: 'integer', value: '1', description: 'enable cpu gadget')
option('G_cpufreq', type: 'integer', value: '1', description: 'enable cpufreq gadget')
option('G_memory', type: 'integer', value: '1', description: 'enable memory gadget')
option('G_powerstat', type: 'integer', value: '1', description: 'enable powerstat gadget')
option('G_workspace', type: 'integer', value: '1', description: 'enable workspace gadget')
option('G_alsa', type: 'integer', value: '1', description: 'enable alsa gadget')
option('G_pulseaudio', type: 'integer', value: '1', description: 'enable pulseaudio gadget')
option('G_network', type: 'integer', value: '1', description: 'enable network gadget')
option('G_label', type: 'integer', value: '1', description: 'enable label gadget')
option('G_script', type: 'integer', value: '1', description: 'enable script gadget')

option('homedir', type: 'string', value: '', description: 'home dir')
option('user', type: 'integer', value: '1000', description: 'uid')

